--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,20 @@
 @import 'fonts.css';
 
-body {
+* {
+	margin: 0;
+    padding: 0;
     font-family: 'Myriad Pro Regular';
+
 }
 
 .menu-bar {
     height: 100px;
     padding: 30px 0;
     background-color: #191919;
+}
+
+.menu-bar > .container {
+    max-width: 1200px
 }
 
 ul, li {
@@ -26,6 +33,7 @@ ul, li {
 
 .header-element {
     font-size: 12px;
+    line-height: 2;
 }
 
 .header-telephone {
@@ -46,3 +54,123 @@ ul, li {
     padding-top: 17px
 }
 
+span :hover {
+    cursor: pointer;
+    transition: 0,5s;
+    background-image: none !important;
+    border: white solid 1px;
+}
+
+/* Шапка */
+
+.header {
+    background-image: url(img/background_header.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    text-align: left;
+    text-color: black
+}
+
+.header > .container {
+    background-color: #f7b516;
+    padding: 100px 180px 500px 100px;
+    margin: 0px 975px 0px 375px;
+    width: 570px;
+    height: 860px;
+}
+
+.container > .list {
+    padding: 0;
+}
+
+.header__title {
+    font-size: 40px;
+    line-height: 1.375;
+    padding-bottom: 47px
+}
+
+.header__subtitle {
+    font-size: 25px;
+    line-height: 1.2;
+    padding-bottom: 100px;
+}
+
+.header_row {
+    font-size: 17px;
+    padding-bottom: 55px;
+    line-height: 1.2;
+}
+
+.header_row > .col-xl-2 {
+    bottom: -3px;
+}
+
+.get__info {
+    background-image: url(img/background_price.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    height: 500px;
+    text-align: right
+}
+
+.get__info > .container {
+    float: right;
+    padding: 99px 392px 0 0;
+}
+
+h2 {
+    font-size: 30px;
+    padding-bottom: 60px
+}
+
+.input-form {
+    height: 70px;
+    width: 370px;
+    background-color: #f2f2f2;
+    border: none;
+}
+
+#your_phone {
+    background-image: url(img/call_answer.png);
+    background-repeat: no-repeat;
+    text-indent: 50px;
+    background-position: 320px;
+}
+
+#your_email {
+    background-image: url(img/envelope.png);
+    background-repeat: no-repeat;
+    text-indent: 50px;
+    background-position: 320px;
+}
+
+#get__price {
+    background-color: rgb(24, 102, 175);
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    width: 370px;
+    height: 80px;
+    padding: 33px 118px 33px 118px;
+    margin-top: 30px
+}
+
+#price__time {
+    margin-top: 55px;
+    width: 370px;
+    height: 80px;
+
+}
+
+#price__time > span {
+    text-align: right;
+    font-size: 14px;
+    line-height: 1.2; 
+    display: inline-block;
+    padding-right: 30px;
+    
+}
+
+#price__time > img {
+    vertical-align: sub;
+}
