--- a/styles.css
+++ b/styles.css
@@ -268,23 +268,52 @@ h2 {
     height: 806px;
     color: black;
     background-color: white;
-    display: flex;
     align-items: center;
     text-align: center;
 }
 
-.guarantees-title{
+.guarantees-title > h2 {
     padding-top: 99px;
+    padding-bottom: 100px;
+    font-size: 36px
 }
 
-.gurantees-item {
-    padding-top: 100px;
+.guarantees-img {
+    padding-bottom: 40px
 }
 
-.guarantees-subtitle {
-    padding-top: 45px
+.guarantees-subtitles > div > h4 {
+    font-size: 18px;
+    padding-bottom: 38px
 }
 
-.more {
-    padding-top: 40px
+.guarantees-more > div > a {
+    color: black;
+    font: 18px underlined;
+    padding-bottom: 100px
 }
+
+/* BONUS */
+
+#bonus {
+    height: 570px;
+    background: #08243e;
+    color: white;
+    text-align: center;
+}
+
+#bonus-title {
+    font-size: 36px;
+    padding: 98px 0 99px 0
+}
+
+.bonus_item {
+    display: inline-block;
+    border-radius: 50%;
+    border: 2px solid white;
+    border-width: 2px;
+    width: 95px !important;
+    height: 95px;
+}
+
+  
