--- a/styles.css
+++ b/styles.css
@@ -4,17 +4,25 @@
 	margin: 0;
     padding: 0;
     font-family: 'Myriad Pro Regular';
-
+    text-decoration-skip-ink: none;
 }
 
 .menu-bar {
     height: 100px;
-    padding: 30px 0;
+    padding: 30px 0 30px 0;
     background-color: #191919;
 }
 
 .menu-bar > .container {
     max-width: 1200px
+}
+
+.header-container {
+    text-align: center
+}
+
+.header-order-call {
+    text-align: left
 }
 
 ol, li {
@@ -28,10 +36,6 @@ ol, li {
     color: #e9e9e9;
 }
 
-.menu-bar a:hover {
-    text-decoration:none
-}
-
 .header-element {
     font-size: 12px;
     line-height: 2;
@@ -39,6 +43,10 @@ ol, li {
 
 .header-telephone {
     font-size: 18px;
+}
+
+.header-telephone:hover {
+    text-decoration: underline
 }
 
 #order-call-button {
@@ -52,14 +60,16 @@ ol, li {
     z-index: 231;
     text-align: center;
     vertical-align: center;
-    padding-top: 17px
+    padding-top: 17px;
+    transition: 0.5;
+    text-decoration: none
 }
 
 span :hover {
     cursor: pointer;
-    transition: 0,5s;
     background-image: none !important;
     border: white solid 1px;
+    transition: 0.5s;
 }
 
 /* Шапка */
@@ -77,6 +87,7 @@ span :hover {
     margin: 0px 975px 0px 375px;
     width: 570px;
     height: 860px;
+    /* text-align: left */
 }
 
 .container > .list {
@@ -471,10 +482,11 @@ h2 {
     background-image: url(img/layer_14.png);
     background-repeat: no-repeat;
     text-align: center;
+    height: 400px
 }
 
 #office-container {
-    padding: 98px 0 104px 0
+    padding: 98px 0 98px 0
 }
 
 #office-title {
@@ -490,10 +502,43 @@ h2 {
 }
 
 #office-phone {
-    font-size: 24px
+    font-size: 24px;
+    color: black
+}
+
+#office-phone:hover {
+    text-decoration: underline;
 }
 
 #map {
     height: 370px;
     width: 100%
+}
+
+footer {
+    background: #191919;
+    color: white;
+    margin-top: -6px 
+}
+
+.footer-container {
+    padding: 40px 0 40px 0
+}
+
+.copyright {
+    padding-top: 13px;
+    font-size: 12px;
+}
+
+#footer-questions {
+    font-size: 13px
+}
+
+#footer-phone {
+    font-size: 18px;
+    color: white;
+}
+
+#footer-phone:hover {
+    text-decoration: underline
 }
