--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ ol, li {
     text-align: center;
     vertical-align: center;
     padding-top: 17px;
-    transition: 0.5;
+    transition: 0.5s;
     text-decoration: none
 }
 
@@ -67,6 +67,7 @@ span :hover {
     border: white solid 1px;
     transition: 0.5s;
 }
+
 
 /* Шапка */
 
@@ -270,6 +271,10 @@ h2 {
       box-shadow: 1px 1px 6px #d19915
   }
 
+.yellow_button {
+    transition: 0.15s;
+}
+
 #vendor_call {
     font-size: 14px;
     line-height: 29px;
@@ -383,17 +388,20 @@ h2 {
     box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
     width: 330px;
     height: 147px;
-    border-radius: 1px
+    border-radius: 1px;
+    margin-top: 8px
 }
 
-.list-group-description:after {
+.list-group-description:before {
     content:"";
     display: block;
     position: absolute;
-    left: -15px;
-    border-top: 8px solid transparent;
-    border-bottom: 8px solid transparent;
-    border-right: 15px solid #000;
+    
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent; 
+    border-bottom: 18px solid white;
+    left: 20px;
+    top: 15px;
 }
 
 #list-group-item-1 {
@@ -443,7 +451,16 @@ h2 {
 }
 
 .warehouse-img {
-    padding-bottom: 99px
+    padding-bottom: 99px;
+}
+
+.warehouse-img div img:hover {
+    transform: scale(1.05, 1.05);
+    transition: 1s
+}
+
+.warehouse-img div img {
+    transition: 1s
 }
 
 #specialists {
@@ -476,7 +493,8 @@ h2 {
 
 .consult-title {
     font-size: 30px;
-    padding-bottom: 60px
+    padding-bottom: 60px;
+    color: white
 }
 
 #consult-subtitle {
@@ -485,10 +503,10 @@ h2 {
 
 .consult-title a {
     color: white;
-}
+} 
 
-.consult-title a:hover {
-    text-decoration: none
+.consult-title:hover {
+    color: white
 }
 
 #input-form-telephone-consult {
@@ -507,7 +525,7 @@ h2 {
     width: 370px;
     height: 70px;
     border: none;
-    color: white
+    color: white;
 }
 
 #office {
